--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h1>Ambientes <span>únicos</span> para você!</h1>
     <p>
     Nós criamos ambientes <strong> exclusívos </strong>
-    <strong> únicos</strong>, 
+    e <strong> únicos</strong>, 
     com muito bom gosto e profissionalismo, 
     investimos tempo e <span>dedição no seu projeto.</span>
   </p>
