--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+<!-- Instrução que define o tipo do documento. -->
 <!DOCTYPE html>
 <html lang="pt-br">
+  <!-- Tag <head> contém as instruções para a página -->
  <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,6 +19,8 @@
      <link rel="stylesheet" href="style.css">
 
   </head>
+
+  <!-- Tag <body> é o corpo do documento, onde tem as informações que serão mostradas. -->
   <body>
   
      <div id="hero">
@@ -27,10 +31,9 @@
   
     <h1>Ambientes <span>únicos</span> para você!</h1>
     <p>
-    Nós criamos ambientes <strong> exclusívos </strong>
-    e <strong> únicos</strong>, 
-    com muito bom gosto e profissionalismo, 
-    investimos tempo e <span>dedição no seu projeto.</span>
+    Nós criamos ambientes <strong> exclusívos </strong> e <strong> únicos</strong>, 
+    com muito bom gosto e profissionalismo,investimos tempo e 
+     <span>dedição no seu projeto.</span>
   </p>
 
   <br/>
